--- a/src/content/blog/07-08-2025-vs-21-08-2025.md
+++ b/src/content/blog/07-08-2025-vs-21-08-2025.md
@@ -11,7 +11,8 @@ pubDate: 08 26 2025
 *If data is appearing here, it doesn't mean that it is actually available in the game (yet)*
 ## Comparing Game Data Snapshot from 07-08-2025 (OLD) with Snapshot from 21-08-2025 (NEW)
 
-## New Items (18)
+## Items
+### New (18)
 **Nobility Costume Lucky Box**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"><br>
 **Description:** This box contains a Nobility Set with Speed Bonus. You can select your gender after opening the Lucky Box.<br>
@@ -97,7 +98,7 @@ pubDate: 08 26 2025
 **Item Kind:** Pickup Pet<br>
 
 *Note:* Some fashion like Hat, Suit, Shoes and Backpacks were filtered out (6)
-## Changed Items (6)
+### Changed (6)
 **Name:** Nobility Costume Lucky Box has changes<br>
 **Nobility Costume Lucky Box --> Nobility Red Suit (M)**
 <img src="/images/07-08-2025-21-08-2025/sprites/syssysscrbxluck.png"> --> <img src="/images/07-08-2025-21-08-2025/sprites/mclo2025nobilityupper-et05.png"><br>
@@ -140,26 +141,33 @@ pubDate: 08 26 2025
 **Premium Item:** True<br>
 **Rarity:** Common<br>
 
-## New Equip Sets (0)
+## Equip Sets
+### New (0)
 *No new Equip Sets*
-## New Accessories (0)
+## Accessories
+### New (0)
 *No new Accessories*
-## Changed Accessories (0)
+### Changed (0)
 *No changed Accessories*
 
-## New Achievements (0)
+## Achievements
+### New (0)
 *No new Achievements*
-## New Skills (0)
+## Skills
+### New (0)
 *No new Skills*
-## Changed Skills (0)
+### Changed (0)
 *No changed Skills*
-## New Worlds (0)
+## Worlds
+### New (0)
 *No new Worlds*
-## New Maps (0)
+## Maps
+### New (0)
 *No new Maps*
-## Changed Mover (0)
+## Mover
+### Changed (0)
 *No changed Movers*
-## New Mover (Monster etc.) (1)
+### New (1)
 **Red Pawsh**<br>
 **Level:** 0<br>
 **Icon:** <br>
@@ -167,39 +175,49 @@ pubDate: 08 26 2025
 **Killable:** False<br>
 **Element:** None<br>
 
-## Changed Emoticons (0)
+## Emoticons
+### Changed (0)
 *No changed Emoticons*
-## New Emoticons (0)
+### New (0)
 *No new Emoticons*
-## Changed Couple Skills (0)
+## Couple Skills
+### Changed (0)
 *No changed Couple Skills*
-## New CoupleSkills (0)
+### New (0)
 *No new Couple Skills*
-## Changed Party Skills (0)
+## Party Skills
+### Changed (0)
 *No changed Party Skills*
-## New CoupleSkills (0)
+### New (0)
 *No new Party Skills*
-## Changed Item Kinds (0)
+## Item Kinds
+### Changed (0)
 *No changed Item Kinds*
-## New Item Kinds (0)
+### New (0)
 *No new Item Kinds*
-## Changed Music (0)
+## Music
+### Changed (0)
 *No changed Music*
-## New Music (0)
+### New (0)
 *No new Music*
-## Changed Characters (0)
+## Characters
+### Changed (0)
 *No changed Characters*
-## New Characters (0)
+### New (0)
 *No new Item Kinds*
-## New Jobs (0)
+## Jobs 
+### New (0)
 *No new Jobs*
-## Changed Pets (0)
+## Pets
+### Changed (0)
 *No changed Pets*
-## New Pets (0)
+### New (0)
 *No new Pets*
-## New Quests (0)
+## Quests
+### New (0)
 *No new Quests*
-## New Sounds (0)
+## Sounds
+### New (0)
 *No new Sounds*
 ## New Textures (0)
 *No new textures*
@@ -271,4 +289,4 @@ pubDate: 08 26 2025
 
 ```ansi
 [2;36mBrought to you by[0m [2;34mi9hdkill[0m - [2;36mhappy flying[0m[2;31m[0m
-[2;34mi9hdkill3 [2;36mon FWC and [2;34mi9hdkill [2;36mon Burudeng if you to show some love for the hard work[0m```
+[2;34mi9hdkill3 [2;36mon FWC and [2;34mi9hdkill [2;36mon Burudeng if you wish to show some love for the hard work[0m```
