--- a/src/content/blog/07-08-2025-vs-21-08-2025.md
+++ b/src/content/blog/07-08-2025-vs-21-08-2025.md
@@ -165,8 +165,6 @@ pubDate: 08 26 2025
 ### New (0)
 *No new Maps*
 ## Mover
-### Changed (0)
-*No changed Movers*
 ### New (1)
 **Red Pawsh**<br>
 **Level:** 0<br>
@@ -175,44 +173,46 @@ pubDate: 08 26 2025
 **Killable:** False<br>
 **Element:** None<br>
 
-## Emoticons
 ### Changed (0)
-*No changed Emoticons*
+*No changed Movers*
+## Emoticons
 ### New (0)
 *No new Emoticons*
-## Couple Skills
 ### Changed (0)
-*No changed Couple Skills*
+*No changed Emoticons*
+## Couple Skills
 ### New (0)
 *No new Couple Skills*
-## Party Skills
 ### Changed (0)
-*No changed Party Skills*
+*No changed Couple Skills*
+## Party Skills
 ### New (0)
 *No new Party Skills*
+### Changed (0)
+*No changed Party Skills*
 ## Item Kinds
+### New (0)
+*No new Item Kinds*
 ### Changed (0)
 *No changed Item Kinds*
-### New (0)
-*No new Item Kinds*
 ## Music
-### Changed (0)
-*No changed Music*
 ### New (0)
 *No new Music*
-## Characters
 ### Changed (0)
-*No changed Characters*
+*No changed Music*
+## Characters
 ### New (0)
 *No new Item Kinds*
+### Changed (0)
+*No changed Characters*
 ## Jobs 
 ### New (0)
 *No new Jobs*
 ## Pets
-### Changed (0)
-*No changed Pets*
 ### New (0)
 *No new Pets*
+### Changed (0)
+*No changed Pets*
 ## Quests
 ### New (0)
 *No new Quests*
@@ -221,12 +221,13 @@ pubDate: 08 26 2025
 *No new Sounds*
 ## New Textures (0)
 *No new textures*
-## New Sprites (0)
+## Sprites
+### New (0)
 *No new sprites*
 ## Language File
-### The following language keys were removed
+### Removed
 *Nothing removed*
-### Changed language Values
+### Changed
 ```diff
   propitem_txt_901477: "Blue Pawsh" --→ "Nobility 2% Red Set"
   propitem_txt_901478: "Too posh to pounce, but just fancy enough to fetch your loot with flair." --→ "Nobility Red Cloak"
@@ -237,7 +238,7 @@ pubDate: 08 26 2025
   propitem_txt_901483: "Nobility Costume Lucky Box" --→ "Nobility 2% Red Set (M)"
   propitem_txt_901484: "This box contains a Nobility Set with Speed Bonus. You can select your gender after opening the Lucky Box." --→ "The Nobility 2% Red Set for male characters."
 ```
-### The following language keys were added
+### New
 ```diff
 + propitem_txt_901485: Nobility Red Hat (F)
 + propitem_txt_901486: Nobility Red Suit (F)
