--- a/src/content/blog/07-08-2025-vs-21-08-2025.md
+++ b/src/content/blog/07-08-2025-vs-21-08-2025.md
@@ -219,26 +219,14 @@ pubDate: 08 26 2025
 ## Sounds
 ### New (0)
 *No new Sounds*
-## New Textures (0)
+## Textures
+### New (0)
 *No new textures*
 ## Sprites
 ### New (0)
 *No new sprites*
 ## Language File
-### Removed
-*Nothing removed*
-### Changed
-```diff
-  propitem_txt_901477: "Blue Pawsh" --→ "Nobility 2% Red Set"
-  propitem_txt_901478: "Too posh to pounce, but just fancy enough to fetch your loot with flair." --→ "Nobility Red Cloak"
-  propitem_txt_901479: "Pink Pawsh" --→ "Nobility Red Hat (M)"
-  propitem_txt_901480: "Orange Pawsh" --→ "Nobility Red Suit (M)"
-  propitem_txt_901481: "Green Pawsh" --→ "Nobility Red Shoes (M)"
-  propitem_txt_901482: "Navy Pawsh" --→ "Nobility Red Hands (M)"
-  propitem_txt_901483: "Nobility Costume Lucky Box" --→ "Nobility 2% Red Set (M)"
-  propitem_txt_901484: "This box contains a Nobility Set with Speed Bonus. You can select your gender after opening the Lucky Box." --→ "The Nobility 2% Red Set for male characters."
-```
-### New
+### New (26)
 ```diff
 + propitem_txt_901485: Nobility Red Hat (F)
 + propitem_txt_901486: Nobility Red Suit (F)
@@ -267,6 +255,19 @@ pubDate: 08 26 2025
 + propitem_txt_901509: A package containing 20x Autumn Buff Lucky Box, 5x Scroll of Amplification, 5x Flask Box and 5x Vital Drink X or Refresher Hold. All items are also linked.
 + propmover_txt_400430: Red Pawsh
 ```
+### Changed (8)
+```diff
+  propitem_txt_901477: "Blue Pawsh" --→ "Nobility 2% Red Set"
+  propitem_txt_901478: "Too posh to pounce, but just fancy enough to fetch your loot with flair." --→ "Nobility Red Cloak"
+  propitem_txt_901479: "Pink Pawsh" --→ "Nobility Red Hat (M)"
+  propitem_txt_901480: "Orange Pawsh" --→ "Nobility Red Suit (M)"
+  propitem_txt_901481: "Green Pawsh" --→ "Nobility Red Shoes (M)"
+  propitem_txt_901482: "Navy Pawsh" --→ "Nobility Red Hands (M)"
+  propitem_txt_901483: "Nobility Costume Lucky Box" --→ "Nobility 2% Red Set (M)"
+  propitem_txt_901484: "This box contains a Nobility Set with Speed Bonus. You can select your gender after opening the Lucky Box." --→ "The Nobility 2% Red Set for male characters."
+```
+### Removed (0)
+*Nothing removed*
 ## Nerdy stuff
 ## Stats
 **Language Keys**: 38868 -> 38894<br>
@@ -290,4 +291,5 @@ pubDate: 08 26 2025
 
 ```ansi
 [2;36mBrought to you by[0m [2;34mi9hdkill[0m - [2;36mhappy flying[0m[2;31m[0m
-[2;34mi9hdkill3 [2;36mon FWC and [2;34mi9hdkill [2;36mon Burudeng if you wish to show some love for the hard work[0m```
+[2;34mi9hdkill3 [2;36mon FWC and [2;34mi9hdkill [2;36mon Burudeng if you wish to show some love for the hard work[0m[2;31m[0m
+```
