--- a/src/content/blog/07-08-2025-vs-21-08-2025.md
+++ b/src/content/blog/07-08-2025-vs-21-08-2025.md
@@ -176,8 +176,10 @@ pubDate: 08 26 2025
 ### Changed (0)
 *No changed Movers*
 ## Emoticons
-### New (0)
-*No new Emoticons*
+### New (1)
+**Kiss**<br>
+<img src="/images/07-08-2025-21-08-2025/sprites/emo_kiss.png"><img src="/images/07-08-2025-21-08-2025/sprites/emo_kiss_mo.png"> **Name:** kiss<br>
+
 ### Changed (0)
 *No changed Emoticons*
 ## Couple Skills
@@ -202,7 +204,7 @@ pubDate: 08 26 2025
 *No changed Music*
 ## Characters
 ### New (0)
-*No new Item Kinds*
+*No new Characters*
 ### Changed (0)
 *No changed Characters*
 ## Jobs 
@@ -277,7 +279,7 @@ pubDate: 08 26 2025
 **Mover**: 1629 -> 1630<br>
 **Sounds**: 1327 <br>
 **Music**: 64 <br>
-**Emoticons**: 36 <br>
+**Emoticons**: 35 -> 36<br>
 **Skills**: 282 <br>
 **Party Skills**: 9 <br>
 **Couple Skills**: 8 <br>
