--- a/src/content/blog/18-09-2025-vs-01-10-2025.md
+++ b/src/content/blog/18-09-2025-vs-01-10-2025.md
@@ -1,6 +1,6 @@
 ---
 title: Snapshot 18-09-2025 vs. Snapshot 01-10-2025
-pubDate: 10 01 2025
+pubDate: 10 02 2025
 ---
 
 
@@ -21,7 +21,7 @@ pubDate: 10 01 2025
 **Item Kind:** Recovery<br>
 
 **[2025 FWC] Speed Costume Random Box(2024 costumes)**
-<img src="/images/18-09-2025-01-10-2025/sprites/64syssysscrbxsummer2023.png"><br>
+<img src="/images/18-09-2025-01-10-2025/sprites/64/syssysscrbxsummer2023.png"><br>
 **Description:** Unlock the excitement with the FWC2025 Box and claim one of 32 magnificent fashions inside!<br>
 **Premium Item:** True<br>
 **Rarity:** Common<br>
@@ -347,7 +347,17 @@ pubDate: 10 01 2025
 ```
 ## Sprites
 ### New (10)
-**New interesting sprites are attached to the <a href="https://discord.gg/2sWgMqwhRz">Discord Post</a> only (copyright)**
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/banner_halloweenevent_2025.png">
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/guildlogo35.png">
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/guildlogo36.png">
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/guildlogo37.png">
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/guildlogo38.png">
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/guildlogo39.png">
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/guildlogo40.png">
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/guildlogo41.png">
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/guildlogo42.png">
+<img src="/images/18-09-2025-01-10-2025/sprites/ui/guildlogo43.png">
+<br>
 ```diff
 + ui/banner_halloweenevent_2025.png
 + ui/guildlogo35.png
