--- a/src/content/blog/18-09-2025-vs-01-10-2025.md
+++ b/src/content/blog/18-09-2025-vs-01-10-2025.md
@@ -3,7 +3,7 @@ title: Snapshot 18-09-2025 vs. Snapshot 01-10-2025
 pubDate: 10 02 2025
 ---
 
-
+<ModelViewer src="/media/mesh.json" />
 
 # New Flyff Universe Game Data Mining Report is available!
 *Important: This data has been automatically data-mined. Most of it might be used in future patches, some isn't or is changed later*<br>
