Update old page

--- a/src/content/blog/03-04-2025-vs-17-04-2025.mdx
+++ b/src/content/blog/03-04-2025-vs-17-04-2025.mdx
@@ -867,26 +867,26 @@ Badge: <img src="/media/03-04-2025-17-04-2025/sprites/ui/fwc3master.png" /><br /
 
 ## Life Mastery
 ### New (1)
-**Name:** Mining<br>
-**Gathering Possibilities:** 1<br>
-**Gathering 1 Description:** Ore that you can see anywhere. You can obtain Common Ores.<br>
-**Mastery points:** 0<br>
-**Use Time:** 3<br>
-**Probabilities:** 1<br>
-Item Name: [Event] Easter Egg<br>
-Chance: 10%<br>
-Item Name: Fragmented Jewel (D)<br>
-Chance: 15%<br>
-Item Name: Quartz (D)<br>
-Chance: 15%<br>
-Item Name: Limestone (D)<br>
-Chance: 15%<br>
-Item Name: Turquoise (D)<br>
-Chance: 15%<br>
-Item Name: Copper Ore (D)<br>
-Chance: 15%<br>
-Item Name: Pebble (D)<br>
-Chance: 15%<br>
+**Name:** Mining<br />
+**Gathering Possibilities:** 1<br />
+**Gathering 1 Description:** Ore that you can see anywhere. You can obtain Common Ores.<br />
+**Mastery points:** 0<br />
+**Use Time:** 3<br />
+**Probabilities:** 1<br />
+Item Name: [Event] Easter Egg<br />
+Chance: 10%<br />
+Item Name: Fragmented Jewel (D)<br />
+Chance: 15%<br />
+Item Name: Quartz (D)<br />
+Chance: 15%<br />
+Item Name: Limestone (D)<br />
+Chance: 15%<br />
+Item Name: Turquoise (D)<br />
+Chance: 15%<br />
+Item Name: Copper Ore (D)<br />
+Chance: 15%<br />
+Item Name: Pebble (D)<br />
+Chance: 15%<br />
 
 
 ## Emoticons
